maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:32: error: illegal start of simple expression
  var L = []
          ^